tests/sem/pass/array_access.c
int fe[234];

int expr(int ss) {
    return ss;
}

void main() {
    fe[expr(213)];
}