tests/sem/error/array_access.c
int c[1];

void main() {
	c["fes"];
}
